fix alignment

--- a/sass/px-accordion.scss
+++ b/sass/px-accordion.scss
@@ -40,8 +40,8 @@
 }
 
 .accordion__icon {
-  width: 1rem;
-  height: 1rem;
+  --iron-icon-width: 1rem;
+  --iron-icon-height: 1rem;
 }
 
 .accordion__status {
